src/components/Calendar/DayTimeline/Intervals/Intervals.module.scss
.interval {
  pointer-events: none;
  position: absolute;
  inset: auto 0;
  z-index: 3;
  border-radius: var(--radius);
  color: var(--background);
  transition: ease-in-out 0.1s;
  &.--results {
    &:hover {
      margin: 0 !important;
      filter: sepia(5%);
    }
  }
  &.--focus {
    margin: 0 !important;
    filter: sepia(5%);
    box-shadow: rgba(0, 0, 0, 0.44) 0 0 20px;
    z-index: 10;
  }
  .top {
    position: absolute;
    inset: 0 30px 0 0;
    height: 20px;
    z-index: 14;
    cursor: row-resize;
    pointer-events: all;
    touch-action: pan-x;
  }

  .bottom {
    position: absolute;
    inset: auto 0 0;
    height: 20px;
    z-index: 15;
    cursor: row-resize;
    pointer-events: all;
    touch-action: pan-x;
  }
  .cross {
    position: absolute;
    inset: 6px 10px auto auto;
    height: 20px;
    width: 20px;
    cursor: pointer !important;
    z-index: 20;
    pointer-events: all;
    opacity: 0.5;
  }
  .cross:hover {
    opacity: 1;
  }
  .clockFace p {
    user-select: none;
    position: relative;
    margin: 8px;
    font-size: 16px;
  }

  * {
    transition: 0.1s;
  }
}

